--- a/css/style.css
+++ b/css/style.css
@@ -212,3 +212,12 @@
 #usp .section__column:hover { background-color: var(--cards-bg-color); }
 #usp .section__columns--cta { text-align: center; }
 usp .section__column--title { font-size: 1.75em; margin-bottom: 20px; }
+
+.btn {
+    border-radius: 30px;
+    text-decoration: none;
+    display: inline-block;
+    font-weight: 600;
+    margin-right: 1.5625em;
+    width: fit-content;
+}
